Revise JSTL & Pebble Templates Tags/Functions